# pythonProject1

./: .env  app.py  loader.py  pyproject.toml
application/: SpeechKit.py  get_IAM_key.py  yandex_config.ini
data/: config.py
handlers/users/: __init__.py  error.py  hello.py  help.py  inline_menu.py  menu.py  start.py  test.py
keyboards/default/: __init__.py  keyboard_menu.py  keyboard_nested.py
keyboards/inline/: inline_kb_menu.py
