[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["IvanPyGit <93933140+IvanPyGit@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
